[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41"]
build-backend = "setuptools.build_meta"

[project]
name = "optivlsi"
version = "0.1.2"
description = "High-performance VLSI CAD algorithms with Numba-accelerated implementations"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Rohan Rajesh Kalbag"},
    {name = "Neeraj Prabhu"},
]
keywords = ["vlsi", "cad", "graph-algorithms", "numba", "networkx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

dependencies = [
    "numpy>=1.23.5",
    "numba>=0.56.4",
    "networkx>=3.0",
    "matplotlib>=3.7.1",
    "pandas>=2.0.0",
    "scipy>=1.10.1",
]

[project.urls]
Homepage = "https://github.com/rohankalbag/optiVLSI"
Repository = "https://github.com/rohankalbag/optiVLSI.git"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-benchmark>=4.0",
]

[tool.setuptools.packages.find]
include = ["optivlsi*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]